tests/e2e/string_templates_if_else_service.story
if (random integer low: 1 high: "{random integer low: 10 high: 20}" to int) or (random integer low: 10 high: "{random integer low: 20 high: 30}" to int)
    x = 0
else if (random integer low: 30 high: "{random integer low: 40 high: 50}" to int) or (random integer low: 40 high: "{random integer low: 50 high: 60}" to int)
    x = 1
